@@ -31,18 +31,18 @@ from sqlalchemy.dialects.postgresql.base import PGDialect, \
 class _PGNumeric(sqltypes.Numeric):
     def result_processor(self, dialect, coltype):
         if self.asdecimal:
-            if coltype in (700, 701):
+            if coltype in (700, 701, 1021, 1022):
                 return processors.to_decimal_processor_factory(decimal.Decimal)
-            elif coltype == 1700:
+            elif coltype in (1700, 1231):
                 # pg8000 returns Decimal natively for 1700
                 return None
             else:
                 raise exc.InvalidRequestError("Unknown PG numeric type: %d" % coltype)
         else:
-            if coltype in (700, 701):
+            if coltype in (700, 701, 1021, 1022):
                 # pg8000 returns float natively for 701
                 return None
-            elif coltype == 1700:
+            elif coltype in (1700, 1231):
                 return processors.to_float
             else:
                 raise exc.InvalidRequestError("Unknown PG numeric type: %d" % coltype)
