@@ -228,7 +228,21 @@ class FloatCoercionTest(TablesTest, AssertsExecutionResults):
             ).scalar()
             eq_(round_decimal(ret, 9), result)
     
-    
+    @testing.provide_metadata
+    def test_arrays(self):
+        t1 = Table('t', metadata, 
+            Column('x', postgresql.ARRAY(Float)),
+            Column('y', postgresql.ARRAY(postgresql.REAL)),
+            Column('z', postgresql.ARRAY(postgresql.DOUBLE_PRECISION)),
+            Column('q', postgresql.ARRAY(Numeric))
+        )
+        metadata.create_all()
+        t1.insert().execute(x=[5], y=[5], z=[6], q=[6.4])
+        row = t1.select().execute().first()
+        eq_(
+            row, 
+            ([5], [5], [6], [decimal.Decimal("6.4")])
+        )
         
 class EnumTest(TestBase, AssertsExecutionResults, AssertsCompiledSQL):
     __only_on__ = 'postgresql'
@@ -1311,8 +1325,17 @@ class MiscTest(TestBase, AssertsExecutionResults, AssertsCompiledSQL):
         else:
             exception_cls = eng.dialect.dbapi.ProgrammingError
         assert_raises(exception_cls, eng.execute, "show transaction isolation level")
-
-
+    
+    @testing.only_on('postgresql+psycopg2', 
+                        "this assertion isn't used on others, "
+                        "except pg8000 which circumvents it")
+    def test_numeric_raise(self):
+        stmt = text("select 'hi' as hi", typemap={'hi':Numeric})
+        assert_raises(
+            exc.InvalidRequestError,
+            testing.db.execute, stmt
+        )
+        
 class TimezoneTest(TestBase):
     """Test timezone-aware datetimes.
 
